WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271979
REGRESSION(
276827@main
) Retain frame request queue in ImageFrameWorkQueue::start
https://bugs.webkit.org/show_bug.cgi?id=271979
Summary
REGRESSION(276827@main) Retain frame request queue in ImageFrameWorkQueue::start
Alex Christensen
Reported
2024-04-01 11:56:54 PDT
rdar://125721264
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2024-04-01 11:58:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26686
EWS
Comment 2
2024-04-01 14:59:33 PDT
Committed
276906@main
(0b216b7fee1a): <
https://commits.webkit.org/276906@main
> Reviewed commits have been landed. Closing PR #26686 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug