REGRESSION(276827@main) Retain frame request queue in ImageFrameWorkQueue::start https://bugs.webkit.org/show_bug.cgi?id=271979 rdar://125721264

Reviewed by Said Abou-Hallawa.

Protecting the ImageFrameWorkQueue is not sufficient because the RequestQueue can be
deallocated separately.  Restore the protection of the queue.

* LayoutTests/fast/images/protected-image-queue-expected.txt: Added.
* LayoutTests/fast/images/protected-image-queue.html: Added.
* Source/WebCore/platform/graphics/ImageFrameWorkQueue.cpp:
(WebCore::ImageFrameWorkQueue::start):

Canonical link: https://commits.webkit.org/276906@main